# platzi-fastapi

./: README.md  conftest.py  db.py  environment.yml  models.py  pyproject.toml
app/: main.py
app/routers/: customers.py  plans.py  transactions.py
app/tests/: tests.py
